# clipper

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml  tauri-builds.yml
openspec/: project.md
openspec/changes/clipboard-manager-001/: design.md  proposal.md  tasks.md
openspec/changes/clipboard-manager-001/specs/clipboard-monitoring/: spec.md
openspec/changes/clipboard-manager-001/specs/history-management/: spec.md
openspec/changes/clipboard-manager-001/specs/keyboard-shortcuts/: spec.md
src/: App.css  App.tsx  Settings.css  Settings.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: clipboard.rs  lib.rs  macros.rs  main.rs  platform.rs  platform_commands.rs  storage.rs
src/components/: WelcomeWizard.css  WelcomeWizard.tsx
