[package]
name = "clipper"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clipper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 核心 - 跨平台
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"

# 剪切板库 - 跨平台，支持 Windows/macOS/Linux
clipboard-rs = "0.3"

# JSON 序列化 - 跨平台
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

# 错误处理
thiserror = "1"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# URL 处理
url = "2.5"

# 键盘输入模拟
enigo = "0.2"


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
